[package]
name = "indranet-mq"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for checkpoint
im = "15.1.0"
environmental = { version = "1.1.3", optional = true }

parity-scale-codec = { version = "3.3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
derive_more = { version = "0.99", default-features = false, features = ["display"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "use_ticket_mutex"], optional = true }

hex = { workspace = true, features = ['alloc'] }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
sp-core = { workspace = true }
indranet-serde-more = { workspace = true }

[features]
default = ["dispatcher", "queue", "signers", "checkpoint"]
dispatcher = ["spin"]
queue = ["spin"]
signers = [
    "sp-core/full_crypto",
    "indranet-serde-more/crypto",
]
checkpoint = ["environmental", "std"]
std = []
