[package]
name = "indranet-types"
version = "0.1.0"
authors = ["Selendra"]
edition = "2018"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.3", default-features = false, features = ["full"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

sp-core = { workspace = true }
indranet-mq = { workspace = true }
prpc = { workspace = true }

[features]
default = ["std", "enable_serde"]
std = [
	"serde/std",
	"scale-info/std",
	"codec/std",
	"full_crypto",
	"sp-core/std",
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
	"scale-info/serde",
]
sgx = [
	"full_crypto",
]
full_crypto = [
	"sp-core/full_crypto",
]
