[package]
name = "indratory"
version = "0.0.1"
edition = "2018"
resolver = "2"

[dependencies]
environmental = "1"
once_cell = "1"
im = "15"
fixed = "1.9.0"
fixed-sqrt = "0.2.4"
fixed-macro = "1.2"
log = "0.4.14"
tracing = "0.1"
chrono = "0.4.22"
base64 = "0.13.0"
num-bigint = "0.4.0"
ring = "0.16.20"
rand = "0.8"
regex = "1.5.5"
serde_json = "1.0"
serde_cbor = "0.11.2"
hex_fmt = "0.3"
hex-literal = "0.3"
glob = "0.3"
bitflags = "1"
async-trait = "0.1.57"
derive_more = "0.99.0"
hash-db = { version = "0.16.0", default-features = false }
num = { package = "num-traits", version = "0.2", default-features = false }
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
scopeguard = { version = "1.1", default-features = false }
serde = { version = "1.0", features = ["derive", "std", "rc"] }
anyhow = { version = "1.0.69", default-features = false }
thiserror = { version = "1.0", default-features = false }
itertools = { version = "0.10.1", default-features = false }
bitcoin = { version = "0.29.2", features = ["serde"]}
bitcoin_hashes = { version = "0.11.0", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.3", default-features = false, features = ["derive", "full", "chain-error"] }

finality-grandpa = { version = "0.16.1", default-features = false, features = ["derive-codec"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", features = ["disable_target_static_assertions"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }

indranet-trie-storage = { path = "../indranet-trie-storage", default-features = false }
# indranet-mq = { path = "../indranet-mq", default-features = false }
indranet-serde-more = { path = "../indranet-serde-more" }

# indranet-crypto = { path = "../indranet-crypto", features = ["getrandom", "stream"] }
# prpc = { path = "../prpc" }
# pink = { path = "../pink/runner", package = "pink-runner" }
# pink-extension-runtime = { path = "../pink/pink-extension-runtime" }

# # Indranet specific
# runtime = { path = "../../standalone/runtime", package = "indranet-node-runtime", default-features = false, features = ["std"] }
# indranet-pallets = { path = "../../pallets/indranet", default-features = false }
# indranet-types = { path = "../indranet-types", default-features = false, features = ["enable_serde", "sgx"] }
# indratory-api = { path = "./api", default-features = false }
# indratory-pal = { path = "./pal", default-features = false }

# # for network service
# futures = { version = "0.3.17", default-features = false }
# async-io = { version = "1.6.0" }
# async-executor = { version = "1.4.1" }
# async-std = { version = "1.10.0" }
# sidevm = { package = "sidevm-host-runtime", path = "../sidevm/host-runtime" }
# indranet-async-executor = { path = '../indranet-async-executor' }


# indranet-scheduler = { path = "../indranet-scheduler" }
# sgx-api-lite = { path = "../sgx-api-lite" }
# reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks"] }
# reqwest-env-proxy = { path = "../reqwest-env-proxy" }

[dev-dependencies]
insta = "1.7.2"
rmp-serde = "1"
serde_path_to_error = "0.1.5"
ron = "0.8.0"
ciborium = "0.2.0"

[features]
default = [
    "sp-runtime-interface/disable_target_static_assertions",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
]
shadow-gk = []
gk-stat = []
