[package]
name = "reqwest-env-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Helper to let reqwest use proxy from the env `all_proxy`"

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = [] }

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
