[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

selendra-primitives = { path = "../../primitives", default-features = false }
selendra-runtime-common = { path = "../../runtime/common", default-features = false }
xcm = { path = "../../parachain/xcm", default-features = false }
xcm-executor = { path = "../../parachain/xcm/xcm-executor", default-features = false }
pallet-collator-selection = { path = "../pallets/collator-selection", default-features = false }
forests-primitives-utility = { path = "../primitives/utility", default-features = false }

[dev-dependencies]
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"selendra-primitives/std",
	"selendra-runtime-common/std",
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-collator-selection/std",
	"forests-primitives-utility/std"
]
