[package]
name = "module-bridge"
version = "0.1.3"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

# Benchmarking primitives
frame-benchmarking = { git = "https://github.com/paritytech/substrate",  default-features = false, optional = true, branch = "polkadot-v0.9.26" }

[build-dependencies]
wasm-builder-runner = { version = "3.0.0", package = "substrate-wasm-builder-runner"}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"frame-benchmarking"
]
