[package]
name = "module-cdp-treasury"
version = "0.1.0"
authors = ["Selendra <inffo@selendra.org>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "selendra-primitives", path = "../../primitives", default-features = false }
nutsfinance-stable-asset = { version = "0.1.0", default-features = false, path = "../stable-asset" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
orml-currencies = { path = "../../orml/currencies" }
module-dex = { path = "../dex" }
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"support/std",
	"primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
